--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Educational platform",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && webpack",
-    "dev": "webpack serve --mode development"
+    "build": "webpack --mode production",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,20 @@
     "url": "https://github.com/deserie-dev/web_project_4/issues"
   },
   "homepage": "https://github.com/deserie-dev/web_project_4#readme",
-  "dependencies": {},
+  "dependencies": {
+    "core-js": "^3.10.1"
+  },
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.2.0",
+    "cssnano": "^4.1.11",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.4.1",
+    "postcss-loader": "^5.2.0",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
